--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Selector de Carpetas y Archivos</title>
   <style>
     body {
@@ -45,7 +45,7 @@
       width: 18px;
       margin-right: 6px;
       transform: rotate(0deg);
-      transition: transform .15s ease;
+      transition: transform 0.15s ease;
     }
     li.folder.open::before {
       content: "▼";
@@ -97,7 +97,37 @@
         children: [
           {
             name: "nes",
-            children: ["supermariobros.html","supermariobros2.html","supermariobros3.html","contra.html","castlevania.html","castlevania2.html","castlevania3.html","kirbyadventure.html","digdug.html","megaman.html","megaman2.html","megaman3.html","megaman4.html","megaman5.html","megaman6.html","bomberman.html","bomberman2.html","metalgear.html","metroid.html","punchout.html","tetris.html","tecmobowl.html","drmario.html","thelegendofzelda.html","zelda2.html","adventureisland.html","blastermaster.html","bartvsthespacemutants.html","bartvstheworld.html"]
+            children: [
+              "supermariobros.html",
+              "supermariobros2.html",
+              "supermariobros3.html",
+              "contra.html",
+              "castlevania.html",
+              "castlevania2.html",
+              "castlevania3.html",
+              "kirbyadventure.html",
+              "digdug.html",
+              "megaman.html",
+              "megaman2.html",
+              "megaman3.html",
+              "megaman4.html",
+              "megaman5.html",
+              "megaman6.html",
+              "bomberman.html",
+              "bomberman2.html",
+              "metalgear.html",
+              "metroid.html",
+              "punchout.html",
+              "tetris.html",
+              "tecmobowl.html",
+              "drmario.html",
+              "thelegendofzelda.html",
+              "zelda2.html",
+              "adventureisland.html",
+              "blastermaster.html",
+              "bartvsthespacemutants.html",
+              "bartvstheworld.html"
+            ]
           },
           {
             name: "gb",
@@ -105,7 +135,39 @@
           },
           {
             name: "segagenesis",
-            children: ["sonic1.html", "sonic2.html","sonicspinball.html","sonic3andknuckles.html","sonic3dblast.html","earthwormjim.html","earthwormjim2.html","boogermanapickandflickadventure.html","rocketknightadventures.html","gunstarheroes.html","goldenaxe.html","streetsofrage.html","streetsofrage2.html","streetsofrage3.html","alteredbeast.html","comixzone.html","ristar.html","toejamearl.html","toejamandearlpaniconfunkotron.html","tazmania.html","coolspot.html","virtualbart.html","toystorydisney.html","mickeymania.html","thesmurfs.html","ultimatemortalkombat3.html","castlevaniabloodlines.html","virtuaracing.html","vectorman.html","vectorman2.html","michaeljacksonmoonwalker.html"]
+            children: [
+              "sonic1.html",
+              "sonic2.html",
+              "sonicspinball.html",
+              "sonic3andknuckles.html",
+              "sonic3dblast.html",
+              "earthwormjim.html",
+              "earthwormjim2.html",
+              "boogermanapickandflickadventure.html",
+              "rocketknightadventures.html",
+              "gunstarheroes.html",
+              "goldenaxe.html",
+              "streetsofrage.html",
+              "streetsofrage2.html",
+              "streetsofrage3.html",
+              "alteredbeast.html",
+              "comixzone.html",
+              "ristar.html",
+              "toejamearl.html",
+              "toejamandearlpaniconfunkotron.html",
+              "tazmania.html",
+              "coolspot.html",
+              "virtualbart.html",
+              "toystorydisney.html",
+              "mickeymania.html",
+              "thesmurfs.html",
+              "ultimatemortalkombat3.html",
+              "castlevaniabloodlines.html",
+              "virtuaracing.html",
+              "vectorman.html",
+              "vectorman2.html",
+              "michaeljacksonmoonwalker.html"
+            ]
           },
           {
             name: "snes",
@@ -121,7 +183,11 @@
           },
           {
             name: "gameboyadvance",
-            children: ["sonic1gba.html", "earthwormjim1gba.html", "earthwormjim2gba.html"]
+            children: [
+              "sonic1gba.html",
+              "earthwormjim1gba.html",
+              "earthwormjim2gba.html"
+            ]
           }
         ]
       },
@@ -129,25 +195,24 @@
       "deltarune.html"
     ];
 
-    const folderList = document.getElementById('folder-list');
+    const folderList = document.getElementById("folder-list");
 
     function createFolderList(items, parentPath = "") {
-      const ul = document.createElement('ul');
+      const ul = document.createElement("ul");
       items.forEach(item => {
-        const li = document.createElement('li');
+        const li = document.createElement("li");
 
         if (typeof item === "string") {
           li.textContent = item;
           li.classList.add("file");
-          li.addEventListener('click', (e) => {
+          li.addEventListener("click", e => {
             e.stopPropagation();
             window.location.href = encodeURI(parentPath + item);
           });
-        } 
-        else if (typeof item === "object" && item.name && item.children) {
+        } else if (typeof item === "object" && item.name && item.children) {
           li.textContent = item.name;
           li.classList.add("folder");
-          li.addEventListener('click', (e) => {
+          li.addEventListener("click", e => {
             e.stopPropagation();
             li.classList.toggle("open");
           });
@@ -158,10 +223,12 @@
       return ul;
     }
 
-    // Crear la lista y mostrar el nivel raíz
+    // Crear la lista raíz y mostrarla (no ocultar)
     const rootUl = createFolderList(folders);
     rootUl.style.display = "block";
     folderList.appendChild(rootUl);
   </script>
 </body>
 </html>
+
+
