please work please...

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           "jetpackjoyride.html",
           "pizzatower.html",
           "fnf.html",
+          "undertale.html",
+          "deltarune.html",
           {
             name: "sm64",
             children: ["index.html"]
@@ -200,9 +202,7 @@
             ]
           }
         ]
-      },
-      "undertale.html",
-      "deltarune.html"
+      }
     ];
 
     const folderList = document.getElementById("folder-list");
@@ -260,3 +260,4 @@
   </script>
 </body>
 </html>
+
