--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
           "fnf.html",
           "undertale.html",
           "deltarune.html",
+          "Minecraft 1.12.2.html",
           {
             name: "sm64",
             children: ["index.html"]
@@ -238,3 +239,4 @@
   </script>
 </body>
 </html>
+
