--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           "undertale.html",
           "deltarune.html",
           "Minecraft 1.12.2.html",
-          "angrybirdshd30.html"
+          "angrybirdshd30.html",
           {
             name: "sm64",
             children: ["index.html"]
@@ -240,5 +240,6 @@
   </script>
 </body>
 </html>
+
 
 
