--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           "deltarune.html",
           "Minecraft 1.12.2.html",
           "angrybirdshd30.html",
+          "cldoomemscripten.html",
           {
             name: "sm64",
             children: ["index.html"]
@@ -240,6 +241,7 @@
   </script>
 </body>
 </html>
+
 
 
 
