--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           "Minecraft 1.12.2.html",
           "angrybirdshd30.html",
           "cldoomemscripten.html",
+          "blockblast.html",
           {
             name: "sm64",
             children: ["index.html"]
@@ -241,6 +242,7 @@
   </script>
 </body>
 </html>
+
 
 
 
